--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 import { Callout } from 'nextra-theme-docs'
 
-# Welcome Madara 🥷
+# Welcome to Deoxys 👽 
 
 **Madara is a standard, customizable and blazing fast ⚡ Starknet sequencer designed to make your projects soar!**
 
