--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,6 +1,7 @@
 # About
 
-Madara is an open-source software built by the Starkware Exploration Team in collaboration with projects such as Pragma, Kakarot and Dojo.
-
-
-It's free of commercial use.
+Deoxys is an open-source software built by Kasar Labs in collaboration with the Starknet exploration team.
+<br />
+<div align="center">
+  <img src="../static/img/deoxys-about.gif" height="400px" width="400px" />
+</div>
