--- a/pages/build.mdx
+++ b/pages/build.mdx
@@ -85,7 +85,7 @@ This chain specification can be thought of as the main source of information tha
 
 ### Start your chain
 
-Now that we are all setup, we can finally run the chain! 🥷
+Now that we are all setup, we can finally run the chain! 👽
 
 There are a lot of ways you can run the chain depending on which role you want to take :
 - **Full node**<br></br>
@@ -127,7 +127,7 @@ Ooook, now your chain is finally running. It's time to deploy your own account!
 
 ### Make some transactions
 
-### 🥷
+### 👽
 
 </Steps>
 
