--- a/pages/security.mdx
+++ b/pages/security.mdx
@@ -3,9 +3,8 @@ import { Callout } from 'nextra-theme-docs'
 # The road towards production
 
 <Callout type="warning" emoji="🏗">
-  Madara is still at the *experimental* stage. So be cautious about going to production with such a system, thorough audits are highly recommended.
+  Deoxys is still at the *development* stage. So be cautious about going to production with such a system, thorough audits are highly recommended.
 </Callout>
 
-Madara aims to be secure *by default* and then let the responsibility to runtime engineers to ensure the changes they make keep the system secure.
-That's mainly why Madara is built on secure and production-ready software such as Substrate, blockifier and cairo-rs. It already secures billion dollars of value accross different chains.
+Deoxys aims to stand out as the fastest and most widely adopted client on Starknet. Thanks to its innovative approach, Deoxys considerably lightens the network, optimizes performance, and delivers a seamless user experience. When you choose Deoxys, you benefit from a state-of-the-art solution designed to unleash the full potential of the Starknet network and facilitate the development of high-performance, scalable decentralized applications.
 
