--- a/pages/starknet.mdx
+++ b/pages/starknet.mdx
@@ -6,8 +6,8 @@
 | ---------------------- | ------------------ |
 | Parent block hash      | ✅ |
 | Block number           | ✅ |
-| Global state root      | 🚧     |
-| Sequencer address      | 🚧     |
+| Global state root      | ✅    |
+| Sequencer address      | ✅    |
 | Block timestamp        | ✅ |
 | Transaction count      | ✅ |
 | Transaction commitment | ✅ |
@@ -31,24 +31,24 @@
 | ---------------------------------------- | ------------------ |
 | starknet_getBlockWithTxHashes            | ✅ |
 | starknet_getBlockWithTxs                 | ✅ |
-| starknet_getStateUpdate                  | ✅ |
-| starknet_getStorageAt                    | ✅ |
-| starknet_getTransactionByHash            | ✅ |
-| starknet_getTransactionByBlockIdAndIndex | ✅ |
-| starknet_getTransactionReceipt           | ✅ |
-| starknet_getClass                        | ✅ |
-| starknet_getClassHashAt                  | ✅ |
-| starknet_getClassAt                      | ✅ |
+| starknet_getStateUpdate                  | 🚧 |
+| starknet_getStorageAt                    | 🚧 |
+| starknet_getTransactionByHash            | 🚧 |
+| starknet_getTransactionByBlockIdAndIndex | 🚧 |
+| starknet_getTransactionReceipt           | 🚧 |
+| starknet_getClass                        | 🚧 |
+| starknet_getClassHashAt                  | 🚧 |
+| starknet_getClassAt                      | 🚧 |
 | starknet_getBlockTransactionCount        | ✅ |
-| starknet_call                            | ✅ |
-| starknet_estimateFee                     | ✅ |
+| starknet_call                            | 🚧 |
+| starknet_estimateFee                     | 🚧 |
 | starknet_blockNumber                     | ✅ |
 | starknet_blockHashAndNumber              | ✅ |
-| starknet_chainId                         | ✅ |
+| starknet_chainId                         | 🚧 |
 | starknet_pendingTransactions             | ✅ |
 | starknet_syncing                         | ✅ |
-| starknet_getEvents                       | ✅ |
-| starknet_getNonce                        | ✅ |
+| starknet_getEvents                       | 🚧 |
+| starknet_getNonce                        | 🚧 |
 | starknet_traceTransaction                | 🚧     |
 | starknet_simulateTransaction             | 🚧     |
 | starknet_traceBlockTransactions          | 🚧     |
