--- a/pages/architecture.mdx
+++ b/pages/architecture.mdx
@@ -1,31 +1,45 @@
 import { Callout } from 'nextra-theme-docs'
 
-# 1) What
+# Architecture
+## Global operation
 
-**Madara is built by the Starkware Exploration Team a.k.a *[Keep Starknet Strange](https://github.com/keep-starknet-strange)* in order to support the 
-[fractal scaling vision](https://medium.com/starkware/fractal-scaling-from-l2-to-l3-7fe238ecfb4f) brought up by Starkware years ago.**
+Here's a straightforward schematic representation of Deoxys, showcasing its dual role as a guardian of the Starknet state and its peer-to-peer state communication functionality. This feature reduces the reliance on requests to the sequencer and minimizes interactions between full node clients and the Starknet network sequencer.
 
-There are many reasons why one would want to have their own L3 rather than building directly on Starknet:
-- Hyper-scalability
-- Better Control
-- Privacy
-- Cheaper/Simpler interoperability
 
-![fractal-scaling](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*clggLFBseZKhBSf-oEWhzA.jpeg)
+<div align="center">
+  <img src="../static/img/architecture.png" height="600px" width="600px" />
+</div>
+<div align="center">
+  <em>Diagram of the overall operation of the Deoxys p2p customer network :</em>
+</div>
 
-Madara opens for a whole new field of innovation; application developers can experiment with different data availability solutions, consensus algorithms, proving schemes.
+<br />
 
-You will find in the `Build On Madara` section details about these different solutions being explored and trade-offs.
+**Step (1):**
+Synchronizing the Deoxys Boot-node with Starknet's current state
 
-## 2) H
+The initial stage of the process involves running a Deoxys boot-node with AUTHORITY status, establishing direct communication with the sequencer gateway. This gateway continuously retrieves blocks starting from the genesis block and stores subsequent states in its database. Once it reaches the latest block issued by the sequencer, it can efficiently query the sequencer as new blocks are produced.
 
-The core component of Madara is the `starknet` pallet. It provides a Starknet compatibility layer for Substrate.
-Existing Cairo code can be executed seamlessly thanks to this.
+**Step (2):**
+Cross-chain verification
 
-This pallet, in addition to the **RPC** module, enables Starknet block emulation, validates starknet-encoded transactions and
-makes it possible to deploy an existing Starknet DApp on Madara without any changes.
+The validity of the blocks received is checked by means of a cross-chain verification on the Ethereum chain. This ensures that network nodes are not subsequently informed of a false status (*in progress*). 
 
-## 3) A
+**Step (3):**
+P2p synchronization of Deoxys nodes from the Deoxys Boot-node
+
+Once a boot-node is operational and its ports are open, an unlimited number of Deoxys clients can be initiated. These clients function similarly to the boot-node but with a distinction that they no longer communicate with the sequencer. Instead, they solely interact with one another. Each client continuously acquires the state by requesting it from its peers while also responding to queries from other nodes within the network.
+
+
+## The Deoxys Runtime
+### 1) The Starknet pallet
+
+The core component of Deoxys is the `starknet` pallet. It provides a Starknet compatibility layer for Substrate.
+
+This pallet, in addition to the **RPC** module, validates starknet-encoded transactions and
+makes it possible to re-execute them and store the successive states.
+
+### 2) Wrapper Block Strategy
 
 You might be asking, how are we able to map Substrate blocks to Starknet blocks ? <br></br>
 Well we use the [wrapper block](https://corepaper.org/substrate/wrapper/) method
@@ -34,81 +48,11 @@ first used by Parity in frontier, the EVM compatibility layer for Substrate.
 > Wrapper block is a strategy in Substrate to allow it processing blocks that were not originally designed with Substrate in mind.
 
 It does add a slight performance overhead but it's negligeable compared to other components of the runtime.
+Substrate block are translated to Starknet blocks in the 'Deoxys' module, and then executed by the Starknet pallet.
 
 
-## The Madara Stack
-
-For now, let's focus on the high level overview and scrap the surface of each of these layers.
-
-![stack](../static/img/stack.png)
-
-### Execution
+### 3) Execution
 
 The execution layer defines the way blocks are executed and state diffs are produced.
-Madara makes it easy to swtich between two different execution crates, [blockifier](https://github.com/starkware-libs/blockifier) by Starkware and [starknet_in_rust](https://github.com/lambdaclass/starknet_in_rust) by LambdaClass.
-
-**Cairo VM**
-
-Under the hood, it will always run the [Cairo VM](https://github.com/lambdaclass/cairo-rs) which is being maintained by Starkware and LambdaClass in Rust.
-Cairo (CPU Algebraic Intermediate Representation) is a programming language for writing provable programs, where one party can prove to another that a certain computation was executed correctly.
-
-- [Cairo Whitepaper](https://eprint.iacr.org/2021/1063) 🐺
-- [Cairo 1 Docs](https://www.cairo-lang.org/docs/v1.0/) 🦀
-- [Cairo Book](https://cairo-book.github.io/) 📒
-
-<Callout type="info" emoji="ℹ️">
-  There are on-going experiments to tweak the Cairo VM by changing for example the field size to Goldilocks which could lead to a major performance increase.
-</Callout>
-
-### Settlement
-
-As a Validity Rollup, any madara-chain's state should be able to be built solely by looking at its settlement layer.<br></br>
-Madara itself doesn't make any assumption regarding the settlement layer chosen.<br></br>
-If we take the example of an L3, then it would regularly send a proof to Starknet for a batch of L3 blocks.
-
-<Callout type="info" emoji="ℹ️">
-  For example Starknet currently settles every ~5 hours mostly because its cost to settle on Ethereum. While an L3 could in practice settle way more often on Starknet for a fraction of the cost.
-</Callout>
-
-The **settlement** term can be misleading, it's important ultimately to make the difference between **SOFT** and **HARD** finality. 
-
-Once **HARD** finality is reached, meaning the transaction has been proven and verified on the settlement layer then it's set in the stone. 
-**SOFT** finality is ultimately about improving the user experience, however we will see that by decentralizing the sequencing layer we can aim for a quite strong soft finality.
-
-### Sequencing
-
-The sequencing is done by Madara and can be tweaked in different ways to fit your own needs.<br></br>
-For instance it could be a simple FCFS, PGA or more complex schemes such as Narwhall & Bullshark or [HotStuff](https://github.com/keep-starknet-strange/madara/issues/180).
-
-The ordering of transactions is fairly important to ensure a good MEV protection and ensure a fair ordering of transactions.
-Although, in some cases such as app-specific chains, encrypted mempools can be implemented ensuring a fair order.
-
-Madara is by default a **decentralized** sequencer, multiple nodes can join the network and the default consensus is [GRANDPA & BABE](https://docs.substrate.io/learn/consensus/), the one used by most of polkadot parachains.
-We believe that while centralized sequencers is the industry standard for now, decentralizing the sequencing layer is of the upmost importance to have 
-actual censorship-resistant systems.
-
-### Data Availability 
-
-Currently, Starknet operates in rollup mode as described [here](https://docs.starknet.io/documentation/architecture_and_concepts/Data_Availability/on-chain-data/).
-Data availability (DA) means that the full state tree is always available, which provides users with the security of knowing that if StarkEx ever stops functioning, they can prove custody of their funds.
-
-Many different DA schemes are being experimented as we speak for Madara: 
-- Validium mode: Data is available off-chain. The Data Availability Committee (DAC) stores it, providing a trusted solution
-- Celestia 
-- Eigen DA
-- Rollup Mode
-
-Each DA mode comes with its own set of assumptions and app developers are free to experiment and go with whatever they feel the most comfortable with.
-
-### Governance
-
-Snapshot X would be the main choice for governance in Madara as it's a fully on-chain governance system which is built upon storage proofs.
-You will see in the different Madara hacks such as the Turbo VM one why storage proofs will be the first choice of bridging mechanism within the Madara ecosystem.
-
-Other governance mechanisms are also being explored such as native substrate [governance pallet](https://github.com/keep-starknet-strange/madara/issues/82).
-Given what we witnessed in the past, one of the core value Madara comes with is on-chain governance. We truly believe that governance should always be enforcable on-chain as it is the case within the Cosmos and Polkadot ecosystems.
-
-<Callout type="default" emoji="🧩">
-  One of the best features Madara offers thanks to being built with Substrate is **forkless** upgrades. You can read more about it [here](https://docs.substrate.io/maintain/runtime-upgrades/#:~:text=To%20perform%20a%20forkless%20runtime,part%20of%20the%20consensus%20process.).
-</Callout>
+With Deoxys, blocks are executed and state diffs are produced using the [blockifier](https://github.com/starkware-libs/blockifier) by Starkware.
 
