--- a/pages/contribute.mdx
+++ b/pages/contribute.mdx
@@ -1,26 +1,24 @@
 import { Callout } from 'nextra-theme-docs'
 
-# Contribute to Madara
+# Contribute to Deoxys
 
-Madara has been built from the day 1 in the most open-source way possible, and will always follow the principles that drive the Starknet ecosystem since day 1.
-Anyone is free to join the telegram group [here](https://t.me/MadaraStarknet), come chat, ask for help, discuss anything!
+Deoxys has been built from the day 1 in the most open-source way possible, and will always follow the principles that drive the Starknet ecosystem since day 1.
+Anyone is free to join the KasarLabs telegram group [here](https://t.me/kasarlabs), come chat, ask for help, discuss anything!
 
-Regular community calls are also organized which you will always find the agenda in the [GitHub dicussions](https://github.com/keep-starknet-strange/madara/discussions).
 
 <Callout type="info" emoji="🧪">
-  Have an idea of an ambitious hack related to one layer of the stack ? Such as a new DA mode or a fancy new VM ?
+  Have an idea of an ambitious hack related to one module of the client ? Such as an optimization update or a fixing issue ?
   Go ahead and create a discussion on the GitHub repo, if all good you'll be invited to present it at one community call and then start implementing it!
 </Callout>
 
 ## Developers
 
-Madara contributions are rewarded through [OnlyDust](https://app.onlydust.xyz/).<br></br>
+Deoxys contributions are rewarded through [OnlyDust](https://app.onlydust.xyz/).<br></br>
 *What does that mean ?* It means that you as a developer are free to pick any open issue and submit a PR. Once the PR is merged you will be paid according to the time/difficulty of the PR.
-There are already more than 20 contributors and we are just waiting for you 😎
-
+For now, Deoxys team does not look for new contributors, but this could change in the future. If you are interested in joining the team, please reach out to us on [Telegram](https://t.me/kasarlabs).
 ## Bug Hunting
 
-Found a bug ? Please submit an [issue](https://github.com/keep-starknet-strange/madara/issues) on GitHub so any open source contributor can look at it and fix it (you can too!)
+Found a bug ? Please submit an [issue](https://github.com/KasarLabs/deoxys/issues) on GitHub so any open source contributor can look at it and fix it (you can too!)
 
 ## Documentation
 
