--- a/pages/ecosystem.mdx
+++ b/pages/ecosystem.mdx
@@ -2,12 +2,8 @@ import { Callout } from 'nextra-theme-docs'
 
 # Ecosystem
 
-You will find under this section a curation of existing developments around Madara and clever ways in which it can be modified.
-What makes Madara superior to other existing development stacks for L2/L3s is its intersection between the Starknet and Substrate ecosystem.
+In this section you'll find a curation of existing developments around Deoxys and the clever ways in which it can be used.
 
-That means that most of existing hacks/projects/pallets that have been built for either Substrate or Starknet could be used if you're willing to build your own Madara chain.
-
-<Callout type="warning" emoji="⚠️">
-  If you want your custom business logic to be provable and secured by the *settlement* chain, then it needs to be written as a Cairo program.
-  Thus adjusments will often need to be made on substrate pallets especially.
+<Callout type="warning" emoji="🚧">
+  Feel free to submit a PR to add your own project to this list!
 </Callout>
