--- a/pages/network.mdx
+++ b/pages/network.mdx
@@ -8,13 +8,9 @@ for your blockchain to be perfectly tailored to your needs.
 |  MILLISECS_PER_BLOCK |  `crates/runtime/src/config.rs` | Average expected block time targeted. |6000 (ms)  |
 |  BlockHashCount |  `crates/runtime/src/config.rs` | Maximum number of block number to block hash mappings to keep (oldest pruned first). |2400  |
 
-The core component of Madara is a custom substrate pallet named `starknet` which you can find under `crates/pallets/starknet`.
+The core component of Deoxys is a custom substrate pallet named `starknet` which you can find under `crates/pallets/starknet`.
 
-However as mentionned in the introduction, Madara is generic by essence.
-It defines a set of types in its configuration specifically the traits that should be implemented by these types **NOT** the types themselves.
-This very powerful concept will allow you to easily change core components of your chain.
-
-Let's take a look at these types and their default values.
+Let's take a closer look at the types and their default values in Deoxys's configuration. 
 
 ```rust
 // `crates/runtime/src/pallets.rs`
