--- a/pages/ecosystem.mdx
+++ b/pages/ecosystem.mdx
@@ -4,6 +4,8 @@ import { Callout } from 'nextra-theme-docs'
 
 In this section you'll find a curation of existing developments around Deoxys and the clever ways in which it can be used.
 
-<Callout type="warning" emoji="🚧">
+<Callout type="info" emoji="🟢">
   Feel free to submit a PR to add your own project to this list!
+  - [Starknode](https://www.kasar.io/starknode): a plug-n-play Deoxys node for Starknet
 </Callout>
+
