--- a/pages/get_started/requirements.mdx
+++ b/pages/get_started/requirements.mdx
@@ -1,4 +1,5 @@
-# Prerequisites 
+# System requirements
+
 Deoxys is a Starknet full node client implementation based on Substrate and 
 powered by Rust. It unlocks the full potential of full nodes on Starknet.
 
