--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,25 +1,15 @@
-# Welcome to Deoxys 👽 
-Deoxys is a Starknet full node client implementation based on Substrate and 
-powered by Rust. It unlocks the full potential of full nodes on Starknet.
+# Introduction and overview
+Welcome to the Deoxys Starknet full node Client documentation! Deoxys is a Starknet full node client implementation written in [Rust](https://www.rust-lang.org/) and powered by [Substrate](https://substrate.io/).
+Established by [Kasar Labs](https://kasar.io) and powered by the Starnet pallet from the [Starkware](https://starkware.co) exploration team, we developed a flagship client that prioritizes both performance and adaptability.
 
-### Prof Oak introduction
+Deoxys is engineered with Rust, leveraging the power and safety of the language, and is powered by Substrate, an extensible framework for building blockchains. This combination ensures that Deoxys seamlessly integrates with current infrastructures while maintaining our commitment to stability, reliability, and security. It is the go-to choice for developers and users that wants a trusted, secured and efficient access to Starknet.
+
+This documentation provides everything you need to know about setting up, configuring, and using the Deoxys Client. It's organized topically, making it simple to find exactly what you need, complete with comprehensive examples and clear illustrations to guide your use of the Deoxys Client.
+
+Your experience and feedback are invaluable to us, and we encourage your input to further refine the Deoxys Client and this documentation. Thank you for choosing Deoxys, and we look forward to supporting your Starknet journey.
 
 <br />
-<div align="center">
-  <img src="../static/img/profoak.png" height="400px" width="400px" />
+<br />
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <img src="../static/img/deoxys-about.gif" height="400" width="400" style={{ borderRadius: '10px' }} />
 </div>
-
-As we usher in the era of the decentralized web, the role of advanced 
-blockchain technology has become increasingly critical. Starknet,
-a decentralized, permissionless, and scalable ZK-Rollup, represents 
-a significant step forward in this field. It has proven itself as a hero in the L2 war and significantly stands out today. 
-But every hero needs a trusted companion, and for Starknet, this ally emerges as **Deoxys**.
-Built on the robust Substrate framework and powered by the reliable 
-might of Rust, Deoxys is the most powerful Starknet full node implementation.
-
-In this documentation, we will learn more about its architecture, its attributes,
-its specifics, and of course, how to launch your own Deoxys and benefit 
-from its powers. But before we dive into that, I would like to say a few words 
-about the technical prerequisites related to full nodes on Starknet and the tools 
-that we are going to use.
-
