--- a/pages/about/liscence.mdx
+++ b/pages/about/liscence.mdx
@@ -1,4 +1,4 @@
-# About
+# Liscence
 
 Deoxys is an open-source software built by Kasar Labs in collaboration with the Starknet exploration team.
 <br />
