--- a/pages/fundamentals/pruning.mdx
+++ b/pages/fundamentals/pruning.mdx
@@ -1,73 +1,1 @@
-# StarkNet Features Compatibility
-
-## Block
-
-| Feature                | State              |
-| ---------------------- | ------------------ |
-| Parent block hash      | ✅ |
-| Block number           | ✅ |
-| Global state root      | ✅    |
-| Sequencer address      | ✅    |
-| Block timestamp        | ✅ |
-| Transaction count      | ✅ |
-| Transaction commitment | ✅ |
-| Event count            | ✅ |
-| Event commitment       | ✅ |
-| Protocol version       | ✅ |
-| Extra data             | ✅ |
-
-## Transaction
-
-| Feature    | State              |
-| ---------- | ------------------ |
-| Declare    | ✅ |
-| Deploy     | ✅ |
-| Invoke     | ✅ |
-| L1 Handler | 🚧     |
-
-## RPC
-
-| Feature                                  | State              |
-| ---------------------------------------- | ------------------ |
-| starknet_getBlockWithTxHashes            | ✅ |
-| starknet_getBlockWithTxs                 | ✅ |
-| starknet_getStateUpdate                  | 🚧 |
-| starknet_getStorageAt                    | 🚧 |
-| starknet_getTransactionByHash            | 🚧 |
-| starknet_getTransactionByBlockIdAndIndex | 🚧 |
-| starknet_getTransactionReceipt           | 🚧 |
-| starknet_getClass                        | 🚧 |
-| starknet_getClassHashAt                  | 🚧 |
-| starknet_getClassAt                      | 🚧 |
-| starknet_getBlockTransactionCount        | ✅ |
-| starknet_call                            | 🚧 |
-| starknet_estimateFee                     | 🚧 |
-| starknet_blockNumber                     | ✅ |
-| starknet_blockHashAndNumber              | ✅ |
-| starknet_chainId                         | 🚧 |
-| starknet_pendingTransactions             | ✅ |
-| starknet_syncing                         | ✅ |
-| starknet_getEvents                       | 🚧 |
-| starknet_getNonce                        | 🚧 |
-| starknet_traceTransaction                | 🚧     |
-| starknet_simulateTransaction             | 🚧     |
-| starknet_traceBlockTransactions          | 🚧     |
-| starknet_addInvokeTransaction            | ✅ |
-| starknet_addDeclareTransaction           | ✅ |
-| starknet_addDeployAccountTransaction     | ✅ |
-
-## Decentralisation
-
-| Feature                                | State              |
-| -------------------------------------- | ------------------ |
-| Single node                            | ✅ |
-| Small pool of nodes (POA)              | 🚧     |
-| Large pool of nodes (Base consensus)   | 🚧     |
-| Large pool of nodes (Custom consensus) | 🚧     |
-
-## Optimisation
-
-| Feature                             | State          |
-| ----------------------------------- | -------------- |
-| Commitments                         | 🚧 |
-| Transaction validity before mempool | 🚧 |
+# Pruning
