--- a/pages/fundamentals/security.mdx
+++ b/pages/fundamentals/security.mdx
@@ -1,10 +1,3 @@
 import { Callout } from 'nextra-theme-docs'
 
-# The road towards production
-
-<Callout type="warning" emoji="🏗">
-  Deoxys is still at the *development* stage. So be cautious about going to production with such a system, thorough audits are highly recommended.
-</Callout>
-
-Deoxys aims to stand out as the fastest and most widely adopted client on Starknet. Thanks to its innovative approach, Deoxys considerably lightens the network, optimizes performance, and delivers a seamless user experience. When you choose Deoxys, you benefit from a state-of-the-art solution designed to unleash the full potential of the Starknet network and facilitate the development of high-performance, scalable decentralized applications.
-
+# Security
