--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,7 +2,7 @@
 Welcome to the Deoxys Starknet full node Client documentation! Deoxys is a Starknet full node client implementation written in [Rust](https://www.rust-lang.org/) and powered by [Substrate](https://substrate.io/).
 Established by [Kasar Labs](https://kasar.io) and powered by the Starnet pallet from the [Starkware](https://starkware.co) exploration team, we developed a flagship client that prioritizes both performance and adaptability.
 
-Deoxys is engineered with Rust, leveraging the power and safety of the language, and is powered by Substrate, an extensible framework for building blockchains. This combination ensures that Deoxys seamlessly integrates with current infrastructures while maintaining our commitment to stability, reliability, and security. It is the go-to choice for developers and users that wants a trusted, secured and efficient access to Starknet.
+Deoxys is written in Rust, leveraging the power and safety of the language, and is powered by Substrate, an extensible framework for building blockchains. This combination ensures that Deoxys seamlessly integrates with current infrastructures while maintaining our commitment to stability, reliability, and security. It is the go-to choice for developers and users that wants a trusted, secured and efficient access to Starknet.
 
 This documentation provides everything you need to know about setting up, configuring, and using the Deoxys Client. It's organized topically, making it simple to find exactly what you need, complete with comprehensive examples and clear illustrations to guide your use of the Deoxys Client.
 
